--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.1",
     "dotenv": "^6.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-particles-js": "^2.1.0",
     "react-scripts": "^1.1.4",
     "react-tilt": "^0.1.4",
+    "reactstrap": "^6.2.0",
     "tachyons": "^4.9.0"
   },
   "scripts": {
